--- a/HlidacStatu.Lib.Db.Insolvence/packages.config
+++ b/HlidacStatu.Lib.Db.Insolvence/packages.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Devmasters.Batch" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Collections" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Core" version="2.2.9" targetFramework="net48" />
-  <package id="Devmasters.DT" version="2.2.4" targetFramework="net48" />
-  <package id="Devmasters.Lang" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.2.2" targetFramework="net48" />
+  <package id="Devmasters.Batch" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Collections" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Lang" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Logging" version="2.3.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
@@ -19,5 +21,6 @@
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WeCantSpell.Hunspell" version="3.0.1" targetFramework="net48" />
 </packages>
