--- a/Tests/Lib.UnitTest/packages.config
+++ b/Tests/Lib.UnitTest/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Devmasters.Core" version="2.2.9" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.2.2" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Logging" version="2.3.0" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.12.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
   <package id="NEST" version="7.12.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
@@ -19,4 +21,5 @@
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
