--- a/Lib.Data.External/packages.config
+++ b/Lib.Data.External/packages.config
@@ -2,26 +2,26 @@
 <packages>
   <package id="Autofac" version="5.2.0" targetFramework="net472" />
   <package id="CsvHelper" version="26.1.0" targetFramework="net48" />
-  <package id="Devmasters.Batch" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Cache" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Collections" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Core" version="2.2.9" targetFramework="net48" />
-  <package id="Devmasters.Crypto" version="2.2.1" targetFramework="net48" />
+  <package id="Devmasters.Batch" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Cache" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Collections" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Crypto" version="2.3.0" targetFramework="net48" />
   <package id="Devmasters.DatabaseUpgrader" version="1.472.1.1" targetFramework="net472" />
-  <package id="Devmasters.DT" version="2.2.4" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.3.0" targetFramework="net48" />
   <package id="Devmasters.Enums" version="2.2.5" targetFramework="net48" />
-  <package id="Devmasters.Imaging" version="2.2.1" targetFramework="net48" />
-  <package id="Devmasters.IO" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Lang" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Net" version="2.2.6" targetFramework="net48" />
+  <package id="Devmasters.Imaging" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.IO" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Lang" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Logging" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Net" version="2.3.0" targetFramework="net48" />
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.12.0" targetFramework="net48" />
   <package id="EMGU.CV" version="3.4.3.3016" targetFramework="net472" allowedVersions="(,4)" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Enums.NET" version="4.0.0" targetFramework="net48" />
-  <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
-  <package id="IPNetwork2" version="2.5.298" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.320" targetFramework="net48" />
   <package id="jnm2.ReferenceAssemblies.net35" version="1.0.1" targetFramework="net472" developmentDependency="true" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
@@ -35,6 +35,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
@@ -54,7 +55,7 @@
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Scriban" version="3.6.0" targetFramework="net48" />
-  <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.2" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
