--- a/Plugin.TransparetniUcty/packages.config
+++ b/Plugin.TransparetniUcty/packages.config
@@ -1,27 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Devmasters.Core" version="2.2.9" targetFramework="net48" />
-  <package id="Devmasters.DT" version="2.2.4" targetFramework="net48" />
-  <package id="Devmasters.Lang" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Net" version="2.2.6" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Lang" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Logging" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Net" version="2.3.0" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.12.0" targetFramework="net48" />
   <package id="EPPlus" version="5.6.1" targetFramework="net48" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
-  <package id="IPNetwork2" version="2.5.298" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.320" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Features" version="5.0.4" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
   <package id="NEST" version="7.12.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
-  <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
@@ -37,5 +38,6 @@
   <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WeCantSpell.Hunspell" version="3.0.1" targetFramework="net48" />
 </packages>
