--- a/SponzoriLoader/packages.config
+++ b/SponzoriLoader/packages.config
@@ -1,22 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Devmasters.Collections" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Core" version="2.2.9" targetFramework="net48" />
-  <package id="Devmasters.IO" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.2.2" targetFramework="net48" />
+  <package id="Devmasters.Collections" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.IO" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Logging" version="2.3.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
-  <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.2" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
@@ -24,4 +30,5 @@
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
