--- a/Util/packages.config
+++ b/Util/packages.config
@@ -3,22 +3,22 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="CouchbaseNetClient" version="2.7.23" targetFramework="net48" />
-  <package id="Devmasters.Batch" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Cache" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Cache.Couchbase" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Collections" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Core" version="2.2.9" targetFramework="net48" />
-  <package id="Devmasters.Crypto" version="2.2.1" targetFramework="net48" />
-  <package id="Devmasters.DT" version="2.2.4" targetFramework="net48" />
+  <package id="Devmasters.Batch" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Cache" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Cache.Couchbase" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Collections" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Crypto" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.3.0" targetFramework="net48" />
   <package id="Devmasters.Enums" version="2.2.5" targetFramework="net48" />
-  <package id="Devmasters.IO" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Lang" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Net" version="2.2.6" targetFramework="net48" />
+  <package id="Devmasters.IO" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Lang" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Logging" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Net" version="2.3.0" targetFramework="net48" />
   <package id="DnsClient" version="1.4.0" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.12.0" targetFramework="net48" />
-  <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
-  <package id="IPNetwork2" version="2.5.298" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.320" targetFramework="net48" />
   <package id="jnm2.ReferenceAssemblies.net35" version="1.0.1" targetFramework="net472" developmentDependency="true" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
@@ -26,6 +26,7 @@
   <package id="Microsoft.AspNetCore.Http.Features" version="5.0.4" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.ObjectPool" version="5.0.4" targetFramework="net48" />
@@ -38,7 +39,7 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net472" />
   <package id="Scriban" version="3.6.0" targetFramework="net48" />
-  <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net472" />
@@ -67,6 +68,7 @@
   <package id="System.Threading.Tasks.Dataflow" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WeCantSpell.Hunspell" version="3.0.1" targetFramework="net472" />
   <package id="ZeroFormatter" version="1.6.4" targetFramework="net472" />
   <package id="ZeroFormatter.Interfaces" version="1.6.4" targetFramework="net472" />
