--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -8,27 +8,27 @@
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
   <package id="CouchbaseNetClient" version="2.7.23" targetFramework="net48" />
   <package id="CsvHelper" version="26.1.0" targetFramework="net48" />
-  <package id="Devmasters.Batch" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Cache" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Cache.Couchbase" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Collections" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Core" version="2.2.9" targetFramework="net48" />
-  <package id="Devmasters.Crypto" version="2.2.1" targetFramework="net48" />
-  <package id="Devmasters.DT" version="2.2.4" targetFramework="net48" />
+  <package id="Devmasters.Batch" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Cache" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Cache.Couchbase" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Collections" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Crypto" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.3.0" targetFramework="net48" />
   <package id="Devmasters.Enums" version="2.2.5" targetFramework="net48" />
-  <package id="Devmasters.Imaging" version="2.2.1" targetFramework="net48" />
-  <package id="Devmasters.IO" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Lang" version="2.2.3" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.2.2" targetFramework="net48" />
-  <package id="Devmasters.Net" version="2.2.6" targetFramework="net48" />
+  <package id="Devmasters.Imaging" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.IO" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Lang" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Logging" version="2.3.0" targetFramework="net48" />
+  <package id="Devmasters.Net" version="2.3.0" targetFramework="net48" />
   <package id="DnsClient" version="1.4.0" targetFramework="net48" />
   <package id="EasyNetQ" version="6.3.1" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.12.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="EPPlus" version="5.6.1" targetFramework="net48" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
-  <package id="IPNetwork2" version="2.5.298" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.320" targetFramework="net48" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
@@ -66,6 +66,7 @@
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.ObjectPool" version="5.0.4" targetFramework="net48" />
@@ -95,7 +96,7 @@
   <package id="RabbitMQ.Client" version="6.2.1" targetFramework="net48" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
-  <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.2" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
